--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
             <div class="portfolio-box">
-              <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
+              <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content"><i class='bx bx-plus-circle bx-lg bx-burst-hover'></i></div>
                 </div>
@@ -758,61 +758,67 @@
   <!-- Portfolio item 1 modal popup-->
   <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-bs-dismiss="modal"><img src="img/cross.svg" alt="Close modal" /></div>
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8">
-              <div class="modal-body">
-                <!-- Project details-->
-                <!-- <h2 class="text-uppercase">Project Name</h2> -->
-                <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <div class="modal-content">
+            <div class="close-modal" data-bs-dismiss="modal"><img src="img/cross.svg" alt="Close modal" /></div>
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-lg-10">
+                  <div class="modal-body">
+                    <!-- Project details-->
+                    <!-- <h2 class="text-uppercase">Project Name</h2> -->
+                    <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
 
-                <!-- =====carousel===== -->
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img src="img/portfolio/project1(1).jpeg" class="d-block w-100" alt="...">
+                    <!-- =====carousel===== -->
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="img/portfolio/project1(1).jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/portfolio/project1(2).jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/portfolio/project1(3).jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/portfolio/project1(4).jpeg" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
                     </div>
-                    <div class="carousel-item">
-                      <img src="img/portfolio/project1(2).jpeg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="img/portfolio/project1(3).jpeg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="img/portfolio/project1(4).jpeg" class="d-block w-100" alt="...">
-                    </div>
-                  </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                  </button>
-                </div>
 
-                <p>Membuat Website sederhana untuk kearsipan jasa pengiriman dengan menggunakan operasi CRUD (Create,
-                  Read, Update, Delete)</p>
-                <ul class="list-inline">
-                  <li>
-                    <strong>Tools/Language:</strong>
+                    <p class="item-intro">Membuat Website sederhana untuk kearsipan jasa pengiriman dengan menggunakan
+                      operasi CRUD
+                      (Create,
+                      Read, Update, Delete)</p>
                     <ul class="list-inline">
-                      <li><i class='bx bxs-check-square bx-tada'></i> HTML</li>
-                      <li><i class='bx bxs-check-square bx-tada'></i> CSS/Bootstrap</li>
-                      <li><i class='bx bxs-check-square bx-tada'></i> JavaScript</li>
-                      <li><i class='bx bxs-check-square bx-tada'></i> PHP (framework CI)</li>
-                      <li><i class='bx bxs-check-square bx-tada'></i> MySql</li>
+                      <li>
+                        <strong>Tools/Language:</strong>
+                        <ul class="list-inline">
+                          <li><i class='bx bxs-check-square bx-tada'></i> HTML</li>
+                          <li><i class='bx bxs-check-square bx-tada'></i> CSS/Bootstrap</li>
+                          <li><i class='bx bxs-check-square bx-tada'></i> JavaScript</li>
+                          <li><i class='bx bxs-check-square bx-tada'></i> PHP (framework CI)</li>
+                          <li><i class='bx bxs-check-square bx-tada'></i> MySql</li>
+                        </ul>
+                      </li>
                     </ul>
-                  </li>
-                </ul>
-                <button class="btn btn-danger btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                  Close
-                </button>
+                    <button class="btn btn-danger btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                      Close
+                    </button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -823,32 +829,63 @@
   <!-- Portfolio item 2 modal popup-->
   <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-bs-dismiss="modal"><img src="img/cross.svg" alt="Close modal" /></div>
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8">
-              <div class="modal-body">
-                <!-- Project details-->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/2.jpg" alt="..." />
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-                  blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia
-                  expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                <ul class="list-inline">
-                  <li>
-                    <strong>Client:</strong>
-                    Explore
-                  </li>
-                  <li>
-                    <strong>Category:</strong>
-                    Graphic Design
-                  </li>
-                </ul>
-                <button class="btn btn-danger btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                  Close
-                </button>
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <div class="modal-content">
+            <div class="close-modal" data-bs-dismiss="modal"><img src="img/cross.svg" alt="Close modal" /></div>
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-lg-10">
+                  <div class="modal-body">
+                    <!-- Project details -->
+                    <!-- <h2 class="text-uppercase">Project Name</h2> -->
+                    <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
+
+                    <!-- ======carousel====== -->
+                    <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="img/portfolio/project2(1).png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/portfolio/project2(2).png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/portfolio/project2(3).png" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    </div>
+
+                    <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/3.jpg" alt="..." /> -->
+                    <p>Membuat Website sederhana yang mirip dengan facebook dan melakukan validasi login serta
+                      menampilkan
+                      halaman home</p>
+                    <ul class="list-inline">
+                      <li>
+                        <strong>Tools/Language:</strong>
+                        <ul class="list-inline">
+                          <li><i class='bx bxs-check-square bx-tada'></i> HTML</li>
+                          <li><i class='bx bxs-check-square bx-tada'></i> CSS</li>
+                          <li><i class='bx bxs-check-square bx-tada'></i> PHP</li>
+                          <li><i class='bx bxs-check-square bx-tada'></i> MySql</li>
+                        </ul>
+                      </li>
+                    </ul>
+                    <button class="btn btn-danger btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                      Close
+                    </button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -856,7 +893,8 @@
       </div>
     </div>
   </div>
-  <!-- Portfolio item 3 modal popup-->
+
+  <!-- Portfolio item 3 modal popup
   <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -865,11 +903,11 @@
           <div class="row justify-content-center">
             <div class="col-lg-8">
               <div class="modal-body">
-                <!-- Project details-->
-                <!-- <h2 class="text-uppercase">Project Name</h2> -->
-                <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
+                Project details
+                <h2 class="text-uppercase">Project Name</h2>
+                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
 
-                <!-- ======carousel====== -->
+                ======carousel======
                 <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -894,7 +932,7 @@
                   </button>
                 </div>
 
-                <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/3.jpg" alt="..." /> -->
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/3.jpg" alt="..." />
                 <p>Membuat Website sederhana yang mirip dengan facebook dan melakukan validasi login serta menampilkan
                   halaman home</p>
                 <ul class="list-inline">
@@ -918,7 +956,7 @@
       </div>
     </div>
   </div>
-  <!-- Portfolio item 4 modal popup-->
+  Portfolio item 4 modal popup
   <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -927,7 +965,7 @@
           <div class="row justify-content-center">
             <div class="col-lg-8">
               <div class="modal-body">
-                <!-- Project details-->
+                Project details
                 <h2 class="text-uppercase">Project Name</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/4.jpg" alt="..." />
@@ -953,7 +991,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
   <!-- Vendor JS Files -->
   <script src="vendor/purecounter/purecounter.js"></script>
