update untuk icon bg image

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             <div class="portfolio-box">
               <a class="portfolio-link portfolio-lightbox" href="img/portfolio/soccer1.jpg">
                 <div class="portfolio-hover">
-                  <div class="portfolio-hover-content"><i class='bx bx-plus-circle bx-lg bx-burst-hover'></i></div>
+                  <div class="portfolio-hover-content"><img src="img/portfolio/image.png"></div>
                 </div>
                 <img class="img-fluid" src="img/portfolio/soccer1.jpg" alt="..." />
               </a>
@@ -509,7 +509,7 @@
             <div class="portfolio-box">
               <a href="img/portfolio/soccer2.jpg" class="portfolio-link portfolio-lightbox">
                 <div class="portfolio-hover">
-                  <div class="portfolio-hover-content"><i class='bx bx-plus-circle bx-lg bx-burst-hover'></i></div>
+                  <div class="portfolio-hover-content"><img src="img/portfolio/image.png"></div>
                 </div>
                 <img class="img-fluid" src="img/portfolio/soccer2.jpg" alt="..." />
               </a>
