update icon bg window

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             <div class="portfolio-box">
               <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                 <div class="portfolio-hover">
-                  <div class="portfolio-hover-content"><i class='bx bx-plus-circle bx-lg bx-burst-hover'></i></div>
+                  <div class="portfolio-hover-content"><img src="img/portfolio/new-window.png"></div>
                 </div>
                 <img class="img-fluid" src="img/portfolio/project1(1).jpeg" alt="..." />
               </a>
@@ -494,7 +494,7 @@
             <div class="portfolio-box">
               <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
                 <div class="portfolio-hover">
-                  <div class="portfolio-hover-content"><i class='bx bx-plus-circle bx-lg bx-burst-hover'></i></div>
+                  <div class="portfolio-hover-content"><img src="img/portfolio/new-window.png"></div>
                 </div>
                 <img class="img-fluid" src="img/portfolio/project2(1).png" alt="..." />
               </a>
