--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             <div class="portfolio-box">
               <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                 <div class="portfolio-hover">
-                  <div class="portfolio-hover-content"><img src="img/portfolio/new-window.png"></div>
+                  <div class="portfolio-hover-content"><img src="img/portfolio/code.png" width="80" height="80"></div>
                 </div>
                 <img class="img-fluid" src="img/portfolio/project1(1).jpeg" alt="..." />
               </a>
@@ -494,7 +494,7 @@
             <div class="portfolio-box">
               <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
                 <div class="portfolio-hover">
-                  <div class="portfolio-hover-content"><img src="img/portfolio/new-window.png"></div>
+                  <div class="portfolio-hover-content"><img src="img/portfolio/code.png" width="80" height="80"></div>
                 </div>
                 <img class="img-fluid" src="img/portfolio/project2(1).png" alt="..." />
               </a>
@@ -829,7 +829,7 @@
   <!-- Portfolio item 2 modal popup-->
   <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="row justify-content-center">
+      <div class="row justify-content-center d-flex align-items-center">
         <div class="col-md-10">
           <div class="modal-content">
             <div class="close-modal" data-bs-dismiss="modal"><img src="img/cross.svg" alt="Close modal" /></div>
