update nama video

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
           <li data-filter="*" class="filter-active">All</li>
           <li data-filter=".filter-project">Project</li>
           <li data-filter=".filter-gallery">Gallery</li>
-          <li data-filter=".filter-embed">Embed</li>
+          <li data-filter=".filter-video">Video</li>
         </ul>
 
         <div class="row portfolio-container">
@@ -520,7 +520,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-embed">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-video">
             <div class="portfolio-box">
               <a href="https://youtu.be/Qt8eoqdwjd8" class="glightbox portfolio-link">
                 <div class="portfolio-hover">
@@ -529,13 +529,13 @@
                 <img class="img-fluid" src="img/portfolio/merah.jpg" alt="..." />
               </a>
               <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Embed</div>
+                <div class="portfolio-caption-heading">Video</div>
                 <div class="portfolio-caption-subheading text-muted">Validation Tutorial</div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-embed">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-video">
             <div class="portfolio-box">
               <a href="https://youtu.be/MPqvUI4Gf1E" class="glightbox portfolio-link">
                 <div class="portfolio-hover">
@@ -544,7 +544,7 @@
                 <img class="img-fluid" src="img/portfolio/merah.jpg" alt="..." />
               </a>
               <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">Embed</div>
+                <div class="portfolio-caption-heading">Video</div>
                 <div class="portfolio-caption-subheading text-muted">CRUD Tutorial</div>
               </div>
             </div>
