update description video

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
               </a>
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">Video</div>
-                <div class="portfolio-caption-subheading text-muted">Validation Tutorial</div>
+                <div class="portfolio-caption-subheading text-muted">Validation LogIn Page</div>
               </div>
             </div>
           </div>
@@ -545,7 +545,7 @@
               </a>
               <div class="portfolio-caption">
                 <div class="portfolio-caption-heading">Video</div>
-                <div class="portfolio-caption-subheading text-muted">CRUD Tutorial</div>
+                <div class="portfolio-caption-subheading text-muted">CRUD</div>
               </div>
             </div>
           </div>
